<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dashboard Praktikum"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_variablefont_wght"
        app:layout_constraintBottom_toTopOf="@+id/btnPertemuan2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnPertemuan2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/outfit_variablefont_wght"
        android:text="@string/per2"
        app:layout_constraintBottom_toTopOf="@+id/btnPertemuan3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnPertemuan3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/outfit_variablefont_wght"
        android:text="@string/per3"
        app:layout_constraintBottom_toTopOf="@+id/btnPertemuan4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPertemuan2" />

    <Button
        android:id="@+id/btnPertemuan4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/outfit_variablefont_wght"
        android:text="@string/per4"
        app:layout_constraintBottom_toTopOf="@+id/btnPertemuan5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPertemuan3" />

    <Button
        android:id="@+id/btnPertemuan5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/outfit_variablefont_wght"
        android:text="@string/per5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPertemuan4" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/outfit_variablefont_wght"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>