<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.HomeFragment">

    <View
        android:id="@+id/background_header"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@drawable/bg_header_wave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selamat Datang,"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dashboard Bina Desa"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayoutMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDashboardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/per2"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/per3"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/per4"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan5"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/per5"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan7"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="@string/per7"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan9"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="Pertemuan 9"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPertemuan10"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/primary"
            android:text="Pertemuan 10"
            app:cornerRadius="16dp" />

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/logout"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridLayoutMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>